# AdventOfCode

./: .gitignore
2022/input_files/: day_19.txt
2022/python/: day_1.py  day_10 copy.py  day_10.py  day_11 copy.py  day_11.py  day_12 copy.py  (+23 more)
2023/: CMakeLists.txt
2023/01/: CMakeLists.txt  main.cpp
2023/01/source/: FirstTask.cpp  FirstTask.h  SecondTask.cpp  SecondTask.h
2023/02/: main.cpp
2023/03/: CMakeLists.txt  main.cpp
2023/04/: CMakeLists.txt  main.cpp
2023/05/: CMakeLists.txt  main.cpp
2023/06/: CMakeLists.txt  main.cpp
2023/07/: CMakeLists.txt
2023/07/source/: Card.cpp
2023/08/: CMakeLists.txt  main.cpp
2023/09/: main.cpp
2023/10/: main.cpp
2023/10/source/: Direction.h  Id.cpp  Id.h  Pipe.cpp  Pipe.h  PipeMap.cpp  PipeMap.h
2023/11/source/: GalaxyMap.cpp  GalaxyMapNode.h  NodeType.h
2023/12/source/: Item.h  SpringInventory.cpp  SpringInventory.h  SpringInventoryItem.h
2023/13/: main.cpp
2023/13/source/: LineDirection.h  Valley.cpp  Valley.h  ValleyMap.cpp  ValleyMap.h
2023/13/test/: 13Tests.cpp
2023/14/: main.cpp
2023/14/source/: Platform.cpp  Platform.h  Rock.cpp  Rock.h
2023/14/test/: RockTests.cpp
2023/15/: main.cpp
2023/15/source/: Hash.cpp  Hash.h  HashMap.cpp  HashMap.h
2023/16/source/: Tile.cpp  Tile.h  TileType.h
2023/17/: main.cpp
2023/17/source/: CityBlock.cpp
2023/18/: main.cpp
2023/18/source/: ConvexhullCalculator.cpp  Direction.h  Trench.cpp  Trench.h  TrenchNode.cpp
2023/18/source/Geometry/: CommonOperations.hpp  GeometryTypes.hpp  Point.hpp  Vector.cpp  Vector.hpp
2023/19/: main.cpp
2023/19/source/: Part.h  Workflow.cpp  WorkflowOrganizer.cpp  WorkflowOrganizer.h
2023/20/: main.cpp
2023/21/: main.cpp
2023/21/source/: Tile.cpp  TileMap.cpp  TileMap.h  TileType.h
2023/23/source/: Direction.h  Path.cpp  Path.h  PathNode.h  PathType.h  RoutePlanner.h
2023/common/: FileParser.cpp  FileParser.h  StringManipulation.cpp  StringManipulation.h  TaskSolver.cpp  TaskSolver.h
2023/common/Graphs/: Id.h
2023/libs/: CMakeLists.txt
2023/libs/common/: Direction.h  Range.cpp  Range.h  StringManipulation.cpp  StringManipulation.h
2023/libs/common/Graphs/: Node.cpp
2023/source/: TaskStore.cpp  TaskStore.h  main.cpp
2023/tasks/1/: DigitAdder.cpp  FirstTask.cpp  FirstTask.h
2023/tasks/10/: CMakeLists.txt  Pipe.cpp  Pipe.h  TenthTask.cpp  TenthTask.h  main.cpp
2023/tasks/10/source/: Pipe.h
2023/tasks/11/: CMakeLists.txt  EleventhTask.cpp  EleventhTask.h  GalaxyMapNode.cpp  GalaxyMapNode.h  main.cpp
2023/tasks/11/source/: GalaxyMap.h
2023/tasks/12/: CMakeLists.txt  TwelfthTask.cpp  TwelfthTask.h  main.cpp
2023/tasks/13/: CMakeLists.txt  ThirteenthTask.cpp  ThirteenthTask.h  Valley.cpp  Valley.h
2023/tasks/13/test/: CMakeLists.txt
2023/tasks/14/: FourteenthTask.cpp  FourteenthTask.h  main.cpp
2023/tasks/15/: CMakeLists.txt  FifteenthTask.cpp  FifteenthTask.h
2023/tasks/16/: CMakeLists.txt  SixteenthTask.cpp  SixteenthTask.h  Tile.h  TileMap.h  main.cpp
2023/tasks/16/source/: TileMap.cpp
2023/tasks/17/: CMakeLists.txt  CityBlock.h  CityMap.cpp  CityNode.h  SeventeenthTask.cpp  SeventeenthTask.h  main.cpp
2023/tasks/17/source/: CityBlock.h  CityMap.h  Direction.h
2023/tasks/18/: CMakeLists.txt  EighteenthTask.cpp  EighteenthTask.h  TrenchNode.h  main.cpp
2023/tasks/18/Geometry/: Line.hpp  Point.cpp
2023/tasks/18/source/: ConvexhullCalculator.hpp  Id.cpp  Trench.cpp  Trench.h
2023/tasks/18/source/Geometry/: CommonOperations.cpp  Line.cpp
2023/tasks/19/: CMakeLists.txt  NineteenthTask.cpp  NineteenthTask.h  Part.cpp  Workflow.h
2023/tasks/19/PartOne/: WorkflowOrganizer.cpp  WorkflowRule.cpp  WorkflowRule.h
2023/tasks/19/PartTwo/: GenericWorkflow.cpp  GenericWorkflow.h  GenericWorkflowOrganizer.cpp  GenericWorkflowOrganizer.h  GenericWorkflowRule.cpp  GenericWorkflowRule.h  PartRatings.cpp  PartRatings.h
2023/tasks/2/: Game.cpp  Game.h  GameController.h  SecondTask.h
2023/tasks/20/: BroadcastModule.cpp  BroadcastModule.h  CMakeLists.txt  CommunicationRelay.cpp  CommunicationRelay.h  ConjunctionModule.cpp  ConjunctionModule.h  FlipFlopModule.cpp  FlipFlopModule.h  IModule.cpp  IModule.h  Module.h  ModuleType.h  Signal.h  TwelfthTask.cpp  TwentiethTask.cpp  TwentiethTask.h
2023/tasks/20/source/: Pulse.h
2023/tasks/21/: Id.h  Tile.h  main.cpp
2023/tasks/23/: CMakeLists.txt  TwentyThirdTask.cpp  main.cpp
2023/tasks/23/source/: Id.cpp  Id.h  RoutePlanner.cpp
2023/tasks/3/: ThirdTask.cpp
2023/tasks/4/: FourthTask.cpp  FourthTask.h
2023/tasks/5/: FifthTask.cpp  FifthTask.h
2023/tasks/6/: SixthTask.cpp  SixthTask.h
2023/tasks/7/: Card.h  Card2.cpp  Card2.h  SeventhTask.cpp  SeventhTask.h  main.cpp
2023/tasks/8/: EighthTask.cpp  EighthTask.h  main.cpp
2023/tasks/9/: NinthTask.cpp  NinthTask.h  main.cpp
2023/tests/1/: DigitAdderTests.cpp
2023/tests/13/: 13Tests.cpp
2023/tests/2/: GameControllerTests.cpp
2023_new/: CMakeLists.txt
2025/: CMakeLists.txt
2025/libs/: CMakeLists.txt
2025/libs/common/: FileParser.h  Range.cpp  Range.h  StringManipulation.cpp  TaskSolver.cpp
2025/libs/common/Graphs/: Id.h
2025/source/: TaskStore.cpp  main.cpp
2025/tasks/1/: Dial.cpp  Dial.h  FirstTask.cpp
2025/tasks/2/: IdRangeValidator.cpp  IdRangeValidator.h  SecondTask.cpp
2025/tasks/3/: BatteryBank.cpp  BatteryBank.h  ThirdTask.cpp  ThirdTask.h  UnlimitedBatteryBank.cpp  UnlimitedBatteryBank.h
2025/tasks/4/: FourthTask.cpp  FourthTask.h  PaperStore.cpp  PaperStore.h
2025/tasks/5/: CafeteriaDatabase.cpp  CafeteriaDatabase.h  FifthTask.cpp  FifthTask.h
2025/tasks/6/: MathProblemSolver.cpp  MathProblemSolver.h  SixthTask.cpp  SixthTask.h
2025/tasks/7/: BeamSplitter.cpp  BeamSplitter.h  SeventhTask.cpp  SeventhTask.h
2025/tasks/8/: Circuit.cpp  Circuit.h  CompletePlayground.cpp  CompletePlayground.h  EightTask.cpp  EightTask.h  JunctionBox.cpp  JunctionBox.h  Playground.cpp  Playground.h
2025/tests/1/: DialTests.cpp
2025/tests/2/: IdRangeValidatorTests.cpp
2025/tests/3/: BatteryBankTests.cpp
2025/tests/5/: CafeteriaDatabaseTests.cpp
(+20 files in other folders)
